// Copyright(c) 2020 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

option go_package  = "github.com/lf-edge/eve/api/go/auth";
option java_package = "com.zededa.cloud.uservice.proto";


message AuthBody {
    bytes  payload = 1;
}

//This is same as certHashAlgorithm in certs/certs.proto
//Keep these two definitions in sync
enum hashAlgorithm {
    HASH_NONE = 0;
    HASH_SHA256_16bytes = 1;  // hash with sha256, the 1st 16 bytes of result in 'senderCertHash'
    HASH_SHA256_32bytes = 2;  // hash with sha256, the whole 32 bytes of hash result
}

message AuthContainer {
    AuthBody authPayload = 1;      // envolope body, a marshalled protobuf data or it can be null
    // if the length of senderCertHash received is not N bytes, as described in hashAlgorithm, then the protobuf
    // message either is not AuthContainer type, or is corrupted. Otherwise, the
    // reciever may not have the sender's signing certificate
    hashAlgorithm algo = 2;        // hash algorithm used by sender Cert
    bytes   senderCertHash = 3;    // N bytes in length, 1st N bytes of sender siging cert sha256 hash
    bytes    signatureHash = 4;    // signature of the sha256 hash of the payload
}
